# bookish-enigma

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
bookish_enigma/: __main__.py  base.py
tests/: test_base.py
