[tool.poetry]
name = "a_flask_test"
version = "0.1.0"
description = ""
authors = ["rochacbruno"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^5.5"
flake8 = "^3.9.2"
black = "^21.8b0"
isort = "^5.9.3"
pytest-cov = "^2.12.1"
codecov = "^2.1.12"
mypy = "^0.910"
gitchangelog = "^3.0.4"
mkdocs = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bookish_enigma = 'bookish_enigma.__main__:main'
